Fix overlapping empty notifs (#180)
* Fix overlapping empty notifs

* Use margin

* Make url clickable

--- a/src/components/notifications/AppNotifications/AppNotificationsEmpty/AppNotificationsEmpty.scss
+++ b/src/components/notifications/AppNotifications/AppNotificationsEmpty/AppNotificationsEmpty.scss
@@ -1,12 +1,9 @@
 .AppNotificationsEmpty {
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 
-  &__wrapper {
-    transform: translateY(-100%);
-  }
+  margin-top: 25%;
 
   &__title {
     font-style: normal;
